--- a/Anasayfa.css
+++ b/Anasayfa.css
@@ -155,7 +155,7 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 1965px;
+  min-height: 1138px;
 }
 
 .u-section-3 .u-text-1 {
@@ -163,10 +163,10 @@
 }
 
 .u-section-3 .u-gallery-1 {
-  height: 1772px;
+  height: 951px;
   grid-gap: 10px 10px;
-  width: 100%;
-  margin: 33px 0 60px;
+  width: 780px;
+  margin: 45px auto;
 }
 
 .u-section-3 .u-carousel-item-1 {
@@ -197,6 +197,10 @@
   margin-bottom: 0;
 }
 
+.u-section-3 .u-back-slide-3 {
+  background-image: none;
+}
+
 .u-section-3 .u-over-slide-3 {
   min-height: 100px;
   padding: 10px;
@@ -206,6 +210,10 @@
   margin-right: 0;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.u-section-3 .u-back-slide-4 {
+  background-image: none;
 }
 
 .u-section-3 .u-over-slide-4 {
@@ -312,8 +320,30 @@
   padding: 10px;
 }
 
+.u-section-3 .u-carousel-item-14 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-14 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-3 .u-carousel-item-15 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-15 {
+  min-height: 100px;
+  padding: 10px;
+}
+
 .u-section-3 .u-carousel-thumbnails-1 {
-  padding-top: 10px;
+  padding: 0 0 0 10px;
 }
 
 .u-section-3 .u-carousel-thumbnail-1 {
@@ -381,9 +411,19 @@
   height: 100px;
 }
 
+.u-section-3 .u-carousel-thumbnail-14 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-3 .u-carousel-thumbnail-15 {
+  width: 100px;
+  height: 100px;
+}
+
 .u-section-3 .u-carousel-control-1 {
   position: absolute;
-  left: 10px;
+  left: 0;
   width: 40px;
   height: 40px;
   background-image: none;
@@ -392,7 +432,7 @@
 
 .u-section-3 .u-carousel-control-2 {
   position: absolute;
-  right: 10px;
+  right: 110px;
   width: 40px;
   height: 40px;
   background-image: none;
@@ -401,68 +441,337 @@
 
 @media (max-width: 1199px) {
   .u-section-3 .u-carousel-thumbnail-1 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-2 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-3 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-4 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-5 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-6 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-7 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-8 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-9 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-10 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-11 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-12 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
   }
 
   .u-section-3 .u-carousel-thumbnail-13 {
-    width: -3px;
-    height: -3px;
+    width: 49px;
+    height: 49px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-14 {
+    width: 49px;
+    height: 49px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-15 {
+    width: 49px;
+    height: 49px;
+  }
+
+  .u-section-3 .u-carousel-control-2 {
+    right: 62px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-gallery-1 {
+    width: 720px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-1 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-2 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-3 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-4 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-5 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-6 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-7 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-8 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-9 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-10 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-11 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-12 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-13 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-14 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-15 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .u-section-3 .u-carousel-control-2 {
+    right: 56px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-gallery-1 {
+    width: 540px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-1 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-2 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-3 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-4 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-5 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-6 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-7 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-8 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-9 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-10 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-11 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-12 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-13 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-14 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-15 {
+    width: 33px;
+    height: 33px;
+  }
+
+  .u-section-3 .u-carousel-control-2 {
+    right: 42px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-gallery-1 {
+    width: 340px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-1 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-2 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-3 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-4 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-5 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-6 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-7 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-8 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-9 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-10 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-11 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-12 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-13 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-14 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-thumbnail-15 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-carousel-control-2 {
+    right: 27px;
   }
 } .u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.45), rgba(0,0,0,0.45)), url("images/640b80adc8a548eb5a4b91d9cafc8db3.jpeg");
@@ -779,17 +1088,17 @@
   padding: 21px;
 }
 
-.u-section-5 .u-btn-1 {
-  background-image: none;
-  font-size: 1.125rem;
-  margin: 35px auto 0 348px;
-  padding: 0;
+.u-section-5 .u-icon-2 {
+  height: 42px;
+  width: 42px;
+  margin: -39px auto 0 366px;
+  padding: 21px;
 }
 
 .u-section-5 .u-icon-3 {
   height: 39px;
   width: 39px;
-  margin: -52px auto 0 20px;
+  margin: 10px auto 0 20px;
   padding: 21px;
 }
 
@@ -798,16 +1107,18 @@
   margin: -21px 800px 0 78px;
 }
 
-.u-section-5 .u-btn-2 {
-  margin: -25px auto 0 348px;
+.u-section-5 .u-btn-1 {
+  background-image: none;
+  border-style: solid;
+  margin: -54px auto 0 340px;
   padding: 0;
 }
 
-.u-section-5 .u-icon-4 {
-  height: 39px;
-  width: 39px;
-  margin: 12px auto 0 20px;
-  padding: 21px;
+.u-section-5 .u-btn-2 {
+  background-image: none;
+  border-style: solid;
+  margin: 2px auto 0 340px;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
@@ -841,14 +1152,13 @@
     margin-left: 16px;
   }
 
-  .u-section-5 .u-btn-1 {
-    border-style: solid;
-    margin-top: 42px;
-    margin-left: 148px;
+  .u-section-5 .u-icon-2 {
+    margin-top: 139px;
+    margin-left: 16px;
   }
 
   .u-section-5 .u-icon-3 {
-    margin-top: -22px;
+    margin-top: -131px;
     margin-left: 16px;
   }
 
@@ -859,15 +1169,14 @@
     margin-left: 64px;
   }
 
-  .u-section-5 .u-btn-2 {
-    border-style: solid;
-    margin-top: 180px;
-    margin-left: 0;
+  .u-section-5 .u-btn-1 {
+    margin-top: 121px;
+    margin-left: 302px;
   }
 
-  .u-section-5 .u-icon-4 {
-    margin-top: -156px;
-    margin-left: 16px;
+  .u-section-5 .u-btn-2 {
+    margin-right: 350px;
+    margin-left: 302px;
   }
 }
 
@@ -901,13 +1210,13 @@
     margin-left: 13px;
   }
 
-  .u-section-5 .u-btn-1 {
-    margin-top: -16px;
-    margin-left: 0;
+  .u-section-5 .u-icon-2 {
+    margin-top: 81px;
+    margin-left: 13px;
   }
 
   .u-section-5 .u-icon-3 {
-    margin-top: -65px;
+    margin-top: -174px;
     margin-left: 13px;
   }
 
@@ -918,12 +1227,14 @@
     margin-right: auto;
   }
 
-  .u-section-5 .u-btn-2 {
-    margin-top: 51px;
+  .u-section-5 .u-btn-1 {
+    margin-top: -8px;
+    margin-left: 231px;
   }
 
-  .u-section-5 .u-icon-4 {
-    margin-left: 13px;
+  .u-section-5 .u-btn-2 {
+    margin-right: 201px;
+    margin-left: 231px;
   }
 }
 
@@ -949,12 +1260,13 @@
     margin-left: 9px;
   }
 
-  .u-section-5 .u-btn-1 {
-    margin-top: 70px;
+  .u-section-5 .u-icon-2 {
+    margin-top: 167px;
+    margin-left: 9px;
   }
 
   .u-section-5 .u-icon-3 {
-    margin-top: -122px;
+    margin-top: -231px;
     margin-left: 9px;
   }
 
@@ -965,12 +1277,14 @@
     margin-left: 84px;
   }
 
-  .u-section-5 .u-btn-2 {
-    margin-top: 89px;
+  .u-section-5 .u-btn-1 {
+    margin-top: 30px;
+    margin-left: 173px;
   }
 
-  .u-section-5 .u-icon-4 {
-    margin-left: 9px;
+  .u-section-5 .u-btn-2 {
+    margin-right: 79px;
+    margin-left: 173px;
   }
 }
 
@@ -1000,12 +1314,13 @@
     margin-left: 7px;
   }
 
-  .u-section-5 .u-btn-1 {
-    margin-top: 44px;
+  .u-section-5 .u-icon-2 {
+    margin-top: 141px;
+    margin-left: 6px;
   }
 
   .u-section-5 .u-icon-3 {
-    margin-top: -132px;
+    margin-top: -241px;
     margin-left: 6px;
   }
 
@@ -1015,11 +1330,13 @@
     margin-left: 68px;
   }
 
-  .u-section-5 .u-btn-2 {
-    margin-top: 64px;
+  .u-section-5 .u-btn-1 {
+    margin-top: 5px;
+    margin-left: 109px;
   }
 
-  .u-section-5 .u-icon-4 {
-    margin-left: 6px;
+  .u-section-5 .u-btn-2 {
+    margin-right: 0;
+    margin-left: 109px;
   }
 }
